Removed some of the references to computer center web sites to we can convert to bibitems with less work.

--- a/SnowmassStyle/Computing/T4-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T4-executiveSummary.tex
@@ -57,7 +57,7 @@ format that is immediately useful to the experiments.
 This workshop provided a framework for implementing higher order  
 calculations in a standardized computing environment made available 
 by DOE at the National Energy Research Scientific Computing Center
-(NERSC)~\cite{NERSC}.  Resource requirements were determined for the
+(NERSC).  Resource requirements were determined for the
 calculation of important background and signal reactions at the
 LHC, including higher order QCD and electroweak (EW) effects. Prototypical results 
 are listed in Table~\ref{tab:summary} and have been summarized in a 
@@ -66,7 +66,7 @@ white paper~\cite{HPCWP}.
 Different High Performance Computing (HPC) environments were tested
 during this workshop and their suitability for perturbative QCD calculations 
 was assessed. We find that it would be beneficial to make the national HPC 
-facilities ALCF~\cite{ALCF}, OLCF~\cite{OLCF} and NERSC~\cite{NERSC} 
+facilities ALCF, OLCF, and NERSC
 generally accessible to particle theorists and
 experimentalists in order to enable the use of existing
 calculational tools for experimental studies involving extensive
@@ -98,7 +98,7 @@ Large-scale distributed computing in Grid environments
 may become relevant for perturbative QCD applications 
 in the near future. This development will be accelerated if Computing Grids
 can also provide access to HPC facilities and clusters where parallel 
-computing is possible on a smaller scale. The Open Science Grid (OSG)~\cite{OSG} 
+computing is possible on a smaller scale. The Open Science Grid (OSG)
 has taken first steps in this direction, and we have successfully used their
 existing interface. The amount of training for new users could be minimized
 if the OSG were to act as a front-end to the national HPC facilities
