Update bibliography to include perturbative QCD references.

--- a/SnowmassStyle/Computing/bib.tex
+++ b/SnowmassStyle/Computing/bib.tex
@@ -28,4 +28,54 @@ T.~Applequist {\em et al.} [USQCD Collaboration],
 \bibitem{SciDAC-software}
 {\tt http://usqcd.jlab.org/usqcd-software/}.
 
+
+%\cite{Aad:2012tfa}
+\bibitem{Aad:2012tfa} 
+  G.~Aad {\it et al.}  [ATLAS Collaboration],
+  %``Observation of a new particle in the search for the Standard Model Higgs boson with the ATLAS detector at the LHC,''
+  Phys.\ Lett.\ B {\bf 716}, 1 (2012)
+  [arXiv:1207.7214 [hep-ex]].
+  %%CITATION = ARXIV:1207.7214;%%
+  %1646 citations counted in INSPIRE as of 30 Sep 2013
+
+%\cite{Chatrchyan:2012ufa}
+\bibitem{Chatrchyan:2012ufa} 
+  S.~Chatrchyan {\it et al.}  [CMS Collaboration],
+  %``Observation of a new boson at a mass of 125 GeV with the CMS experiment at the LHC,''
+  Phys.\ Lett.\ B {\bf 716}, 30 (2012)
+  [arXiv:1207.7235 [hep-ex]].
+  %%CITATION = ARXIV:1207.7235;%%
+  %1617 citations counted in INSPIRE as of 30 Sep 2013
+
+%\cite{Dittmaier:2011ti}
+\bibitem{Dittmaier:2011ti} 
+  S.~Dittmaier {\it et al.}  [LHC Higgs Cross Section Working Group Collaboration],
+  %``Handbook of LHC Higgs Cross Sections: 1. Inclusive Observables,''
+  arXiv:1101.0593 [hep-ph].
+  %%CITATION = ARXIV:1101.0593;%%
+  %537 citations counted in INSPIRE as of 30 Sep 2013
+
+%\cite{Dittmaier:2012vm}
+\bibitem{Dittmaier:2012vm} 
+  S.~Dittmaier, S.~Dittmaier, C.~Mariotti, G.~Passarino, R.~Tanaka, S.~Alekhin, J.~Alwall and E.~A.~Bagnaschi {\it et al.},
+  %``Handbook of LHC Higgs Cross Sections: 2. Differential Distributions,''
+  arXiv:1201.3084 [hep-ph].
+  %%CITATION = ARXIV:1201.3084;%%
+  %223 citations counted in INSPIRE as of 30 Sep 2013
+
+%\cite{Heinemeyer:2013tqa}
+\bibitem{Heinemeyer:2013tqa} 
+  S.~Heinemeyer {\it et al.}  [LHC Higgs Cross Section Working Group Collaboration],
+  %``Handbook of LHC Higgs Cross Sections: 3. Higgs Properties,''
+  arXiv:1307.1347 [hep-ph].
+  %%CITATION = ARXIV:1307.1347;%%
+  %19 citations counted in INSPIRE as of 30 Sep 2013
+
+%\cite{HPCWP}
+\bibitem{HPCWP}
+C.~Bauer {\it et al.},
+%``The computing needs of theoretical high energy physics at the Energy Frontier''
+{\tt http://snowmass2013.org/tiki-index.php?page=HEP+Theory+and+High-Performance-Computing}.
+
+
 \end{thebibliography}
