Added reference for DMZ.

--- a/SnowmassStyle/Computing/bib.tex
+++ b/SnowmassStyle/Computing/bib.tex
@@ -78,4 +78,8 @@ C.~Bauer {\it et al.},
 {\tt http://snowmass2013.org/tiki-index.php?page=HEP+Theory+and+High-Performance-Computing}.
 
 
+%\cite{DMZ}
+\bibitem{DMZ}
+{\tt  http://fasterdata.es.net/science-dmz/}.
+
 \end{thebibliography}
