SteveW's edits to E3 exec summary

--- a/SnowmassStyle/Computing/E3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E3-executiveSummary.tex
@@ -21,7 +21,7 @@ cosmic frontier.  The Computing Frontier IF report thus focuses on the areas
 of charged lepton processes,  neutrinos, baryon number violation and nucleons,
 nuclei and atoms.
 
-The IF has become a focus of the U.S.-based particle physics program. Many  of
+The IF has increasingly become a focus of the U.S.-based particle physics program. Many  of
 the experiments are designed to use very intense particle beams to measure
 rare processes. There is a large number of experiments and a range of scales
 in data output and throughput, as well as in the number of experimenters.
@@ -96,7 +96,8 @@ wider IF community if this was promoted and properly funded.
 \item Access to dedicated and shared resources.  In general, demands for
 computing resources of IF experiments are modest compared to those of the EF
 experiments.  However, those needs are not insignificant, and all experiments
-require at least 1,000 dedicated batch slots.  NO$\nu$A requires 4.8 million
+require at least 1,000 dedicated batch slots to ensure timely physics results. 
+NO$\nu$A requires 4.8 million
 CPU hours per year alone for its simulation needs, LBNE expects to need
 several PB of storage space each year during operation, and even smaller scale
 experiments like MINER$\nu$A and MicroBooNE expect to need PB-sized storage.
@@ -148,7 +149,7 @@ experiments indicated using grid protocols for data storage.
 
 All respondents indicated the need for data handling systems that seamlessly
 integrate distribution of files across the network from multiple locations, to
-enable experiments to make optimal use of storage resources at national lab
+enable experiments to make optimal use of storage resources at national labs
 and universities.  The need for such a system is acutely felt by experiments
 that are not based at Fermilab.  One possible solution to this problem could
 resemble the tiered computing structure used by the LHC experiments, with all
@@ -163,7 +164,7 @@ analysis and Monte Carlo simulation using centralized data stores that are
 distributed to independent analysis jobs running in parallel on grid computing
 clusters.  In the current model of provisioning, there is a remarkable overlap
 in the infrastructure used by experiments. For large computing facilities such
-a Fermilab, it would be useful to design a set of scalable solutions
+as Fermilab, it would be useful to design a set of scalable solutions
 corresponding to each of these patterns, with associated toolkits that would
 allow access and monitoring. Provisioning an experiment or changing a
 computing model would then correspond to adjusting the scales in the
@@ -211,7 +212,7 @@ experiments.   Users must have a simple interface with which to request data
 sets that then determines the stored location of those data and returns the
 data quickly to the user.  Similarly, there should be a standardized grid
 submission tool that determines the optimal location for running jobs without
-the user having to specify.
+the user having to specify those locations.
 
 The IF benefits significantly from the ability to share common frameworks and
 tools, such as ART, GENIE, NuSoft and LArSoft.  The support of these efforts
