Small changes in language.

--- a/SnowmassStyle/Computing/Computing-executiveSummary.tex
+++ b/SnowmassStyle/Computing/Computing-executiveSummary.tex
@@ -102,14 +102,15 @@ within particle physics, including tenure-track jobs, for those working at
 the forefront of computation.
 
 For the {\it Energy Frontier}, computing limitations already
-limit the amount of physics data that can be analyzed. The
+reduce the amount of physics data that can be analyzed. The
 planned upgrades to the LHC energy and luminosity are expected to result in
 a ten-fold increase in the number of events and a ten-fold increase in
 event complexity. Effort has begun to increase code efficiency and
 parallelism in reconstruction software and to explore the potential of
-accelerators such as GPUs and Xeon Phi. It is being considered to save more 
-raw events to tape and only
-reconstruct them selectively. The LHC produces about 15 PB of raw data per
+accelerators such as GPUs and Xeon Phi.
+Saving more raw events to tape and only
+reconstructing them selectively is under considerationa. 
+The LHC produces about 15 PB of raw data per
 year now, but in 2021 the rate may rise to 130 PB. Attention needs to be
 paid to data management and wide-area networking, to assure that network
 connectivity does not become a bottleneck for the distributed event
@@ -142,7 +143,7 @@ Very large simulations will require increasing computing
 power. Comparing simulations with observations will play a crucial role in
 interpretation of experiments, and simulations are needed to help design
 new instruments. There are very significant challenges in dealing with new
-computers architectures and very large data sets, as described above.
+computers' architectures and very large data sets, as described above.
 Growing archival storage, visualization of simulations, and allowing public
 access to data are also issues that need attention.
 
