A few typos and grammtical issues dealt with.

--- a/SnowmassStyle/Computing/E2-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E2-executiveSummary.tex
@@ -14,7 +14,7 @@ science groups, thereby increasing overall throughput and productivity.
 
 Progress in distributed high-throughput computing, in high-performance
 networks, in distributed data management, in remote data access, in work flow
-systems, etc, enables the experiment groups to marshal these diverse and
+systems, etc., enables the experiment groups to marshal these diverse and
 distributed resources into coherent systems, for production teams to run
 immense data processing, management, simulation and distribution work flows,
 and for a community of thousands of scientists to perform data analysis.
@@ -67,9 +67,9 @@ the higher trigger rate and event complexity expected in the second run define
 2015.  The three periods roughly average out to a linear increase.
 
 The growth curves below do not scale with total integrated luminosity but
-indicate that more inputing is needed per unit time as trigger rates and event
+indicate that more computing is needed per unit time as trigger rates and event
 complexity increase. It is not reasonable to expect that the techniques
-currently used to analysis data in the EF will continue to scale indefinitely.
+currently used to analyze data in the EF will continue to scale indefinitely.
 The EF will need to adopt new techniques and methods moving forward.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -113,7 +113,7 @@ service.
 
 On the one side the EF will need to evolve to use alternative computing
 architectures and platforms like GPUs and other co-processors,  low-power
-``small'' cores, etc, as the focus of industry development is moving away from
+``small'' cores, etc., as the focus of industry development is moving away from
 the classic server CPU.  Using GPUs introduces significant diversity to the
 system, complicates the programming, and changes the approaches used in
 scientific calculation, but can increase performance by orders of magnitude
@@ -123,14 +123,14 @@ system, and pose additional programming challenges.  Low power mobile
 platforms are most interesting when they are combined into massively parallel,
 specialized system where a single box may have the same number of cores as a
 remote computing center does today.  These systems would be used more like a
-super computer and less like a batch farm, which will require the field to
+supercomputer and less like a batch farm, which will require the field to
 grow expertise in such much more interconnected computing environments.
 
-Specialized hardware and architectures is likely to be deployed initially in
+Specialized hardware and architectures are likely to be deployed initially in
 extremely well controlled environments, like trigger farms and other dedicated
 centers, where the hardware and be controlled and specified. The next phase is
 likely to be schedulable dedicated specialized systems to permit large-scale
-calculations to achieve a goal similar to making a super computer center
+calculations to achieve a goal similar to making a supercomputer center
 request.  Large scale clusters of specialized hardware owned by the experiment
 are likely to come last, and are only likely to come if they can completely
 replace a class of computing resources and perform a function at a reduced
@@ -154,7 +154,7 @@ computing systems.  We observe that while the EF processing capacity has
 increased largely with what would be expected from Moore's law and relatively
 flat budgets, the storage requirements have grown much faster.  The larger
 number of sites and the need for local caches, the increase in trigger rates,
-and the larger event sizes drives the need for disk-based storage.
+and the larger event sizes drive the need for disk-based storage.
 
 For EF discovery physics and searches there is a case for storing all
 potentially interesting events, and then computationally  applying various
